Fix drag and drop problem on firefox

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ html.dark {
 .navigation-icon,
 .date,
 .days-of-week,
+.calendar-icon,
 .priority {
   -webkit-user-select: none;
   -moz-user-select: none;
